@@ -1,3 +1,5 @@
+2005-09-24	Kalpit Desai <kvdesai@email.unc.edu>
+	* ADCnoisechar.m: A utility to chracterize noise in the data acquisition path.
 2005-09-16  Jeremy Cribb <jcribb@email.unc.edu>
 	* zerodaq.m:  added.  with no arguments, it zeros daq boards.  With an argument it sets the board output to a DC value.
 
